--- a/index.html
+++ b/index.html
@@ -4,44 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card 1</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-                </div>
-            </div></div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4"><div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card 2</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div></div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4"><div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card 3</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div></div>
+
+    <h1>Технологии будущего <span class="badge bg-secondary">New</span></h1>
+
+
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Еще
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Информация</a></li>
+            <li><a class="dropdown-item" href="#">Информация</a></li>
+            <li><a class="dropdown-item" href="#">Информация</a></li>
+        </ul>
+    </div>
+    <div class="card text-bg-warning mb-3" style="max-width: 18rem;">
+        <div class="card-header">Проблема</div>
+        <div class="card-body">
+            <h5 class="card-title">Люди</h5>
+            <p class="card-text">Люди разучатся что либо делать к примеру готовить или убиратся,мыть посуду и тд.</p>
         </div>
     </div>
 
+    <div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+        <div class="card-header"> Плюсы</div>
+        <div class="card-body">
+            <h5 class="card-title">Технологии</h5>
+            <p class="card-text">Людям будет намного легче жить,к примеру сторить дома ,добывать все возможные ресурсы.</p>
+        </div>
+    </div>
 
+    <div class="card text-bg-success mb-3" style="max-width: 18rem;">
+        <div class="card-header">Время</div>
+        <div class="card-body">
+            <h5 class="card-title">А когда же появяться такие технологии?</h5>
+            <p class="card-text">Не нужно ждать это с нетерпение , это не наступит завтра послезавтра-как минимум лет 30-50придется ожидать.</p>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
